--- a/docs/main.tex
+++ b/docs/main.tex
@@ -53,12 +53,29 @@
     \clearpage
 
     %=====================================================================================
-    \renewcommand{\abstractname}{要旨}
 
-    \begin{abstract}
-        研究の要旨。なんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんやなんやかんや
-    \end{abstract}
-
+    \begin{center}
+        {\Large 2024年度 卒業論文} \\[5mm]
+        {\Large \textbf{SNSにおける世論形成と紛争に関する\\
+        Reddit投稿分析\\
+        ーイスラエルによるレバノン侵攻を例にー}} \\[15mm]
+    \end{center}
+    
+    % 学生情報
+    \noindent
+    グローバル地域文化学部 アジア・太平洋コース \\
+    学生ID : 1122192047 氏名: 種村尚大 \\
+    指導教員 : \CID{8443}田智子 \\[15mm]
+    
+    % 論文要旨
+    \noindent
+    {\Large \textbf{論文要旨}} \\[5mm]
+    本研究は、2024年10月1日に発生したイスラエルによるレバノン侵攻を契機に、SNS上の議論がどのように形成され、進展していくのかを探ることを目的とした。具体的には、Redditの投稿データを用い、投稿数の変動、感情的傾向、トピックの変遷を分析することで、SNSが紛争に与える影響を多角的に検討した。研究の結果、投稿数が急増する一方で、センチメントスコアがポジティブにシフトする現象が確認された。また、動的トピックモデリングを用いて、議論が「紛争と軍事行動」から「規則や投稿削除」といったメタ的テーマへと移行する過程を明らかにした。この分析を通じて、SNSが国際紛争におけるデジタル公共圏として機能する一方で、議論の構造や偏りに関する課題があることも示された。本研究の知見は、SNSを活用した情報戦略や政策設計における実践的な示唆を提供するものである。 \\[20mm]
+    
+    % キーワード
+    \noindent
+    {\Large \textbf{キーワード}} \\[5mm]
+    SNS, Reddit, 国際紛争, 世論形成, データ分析
     %=====================================================================================
 
     % 目次の表示
