Add some references

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -99,7 +99,7 @@
 
     21世紀における紛争の様相は、従来の軍事的な衝突に加え、情報空間における戦いの重要性が増している。特に、ソーシャルネットワーキングサービス（SNS）は、紛争に関する情報発信や議論の場として機能し、世論形成に強い影響を与えている。これらのプラットフォームは、リアルタイムでの情報共有、国際的な議論の可視化、多様な声の拡散を可能にしている。
 
-    中でもRedditは、特異な構造と利用者特性を持つSNSとして注目されている。Redditは2005年に設立され、2024年時点で月間アクティブユーザー数が約5億人に達している（Statista, 2024）。その利用者層は主に北米とヨーロッパに集中しており、ユーザーの約50\%が18～34歳と比較的若い世代に偏っている。また、性別比率では男性が約60\%を占めるが、女性ユーザーも年々増加傾向にある（Reddit Demographics Report, 2024）。さらに、Redditのユーザーは教育水準が高く、大学卒業者が多いことも特徴の一つである。
+    中でもRedditは、特異な構造と利用者特性を持つSNSとして注目されている。Redditは2005年に設立され、2024年時点で日毎のアクティブユーザー数が約9720万人に達している\cite{reddit2024third-quater-results}。その利用者層は主に北米とヨーロッパに集中しており\cite{statista2024reddit-country}、ユーザーの約44\%が18～29歳と比較的若い世代に偏っている\cite{statista2024reddit-age}。また、性別比率では男性が約60\%を占めるが、女性ユーザーも年々増加傾向にある\cite{statista2024reddit-gender}。さらに、Redditのユーザーは教育水準が高く、大学卒業者が多いことも特徴の一つである\cite{pew2024reddit-educated}。
 
     このプラットフォームの最大の特徴は、匿名性と分散型のコミュニティ構造にある。Redditは、サブレディットと呼ばれる膨大な数の専門的なコミュニティで構成されており、それぞれが特定のトピックや興味に基づいて議論を展開する。投稿やコメントは、ユーザーからの評価（アップボートまたはダウンボート）によってランキングされるため、コミュニティ全体の関心や優先順位が自然に反映される仕組みが採用されている。この構造は、特定の話題について多様な視点を集約し、リアルタイムで議論を活発化させる基盤を提供している。
 
@@ -125,11 +125,11 @@
     \chapter{SNSにおける世論形成と国際紛争に関する先行研究}
 
     \section{SNSと世論形成}
-    ソーシャルネットワーキングサービス（SNS）は、21世紀において世論形成の重要なツールとなり、従来のマスメディアを補完する役割を果たしている。特に、情報が瞬時に広範囲に拡散され、多様な意見が可視化される点で、SNSは「集団行動を促進するツール」として位置づけられている（Shirky, 2011）。例えば、2010年代の「アラブの春」では、TwitterやFacebookを通じて市民がプロテストの呼びかけや情報共有を行い、社会運動の大規模化を支えたことが報告されている（Howard \& Hussain, 2013）。このように、SNSは社会的・政治的な動員における迅速性と規模の拡大に寄与している。
+    ソーシャルネットワーキングサービス（SNS）は、21世紀において世論形成の重要なツールとなり、従来のマスメディアを補完する役割を果たしている。特に、情報が瞬時に広範囲に拡散され、多様な意見が可視化される点で、SNSは「集団行動を促進するツール」として位置づけられている\cite{shrinky2011}。例えば、2010年代の「アラブの春」では、TwitterやFacebookを通じて市民がプロテストの呼びかけや情報共有を行い、社会運動の大規模化を支えたことが報告されている\cite{howard-hussain2013}。このように、SNSは社会的・政治的な動員における迅速性と規模の拡大に寄与している。
 
-    一方で、SNSにおける情報流通には限界も指摘されている。Sunstein（2001）やPariser（2011）は、エコーチェンバー現象やフィルターバブルが、ユーザーを特定の情報に偏らせるリスクを指摘している。たとえば、Facebookのアルゴリズムによるフィードの最適化が、政治的分断を助長する可能性があることが示されている。これらの現象は、SNSが多様な意見の交換を促進する一方で、逆に対話の閉鎖性を生む可能性があることを示唆している。
+    一方で、SNSにおける情報流通には限界も指摘されている。Sunstein\cite{ulen2001democracy}やPariser\cite{pariser2011filter}は、エコーチェンバー現象やフィルターバブルが、ユーザーを特定の情報に偏らせるリスクを指摘している。たとえば、Facebookのアルゴリズムによるフィードの最適化が、政治的分断を助長する可能性があることが示されている。これらの現象は、SNSが多様な意見の交換を促進する一方で、逆に対話の閉鎖性を生む可能性があることを示唆している。
 
-    さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている（Allcott \& Gentzkow, 2017）。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
+    さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている\cite{allcott-gentzkow2017}。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
 
     \section{国際紛争におけるSNSの役割}
     SNSは国際紛争において、単なる情報共有の場を超え、プロパガンダや情報操作の場としても機能している。Howard \& Hussain（2013）は、アラブの春におけるSNSの役割について、情報の共有と抗議活動の組織化を促進する手段としての重要性を指摘している。また、Zeitzoff（2017）の研究では、イスラエルとハマスの紛争におけるTwitterの使用が、紛争当事者のソフトパワー的な戦略に寄与していることが示されている。たとえば、戦闘の進行状況をリアルタイムで伝えることで、国際的な支持を獲得する動きが観察されている。
@@ -492,6 +492,6 @@
 
     \addcontentsline{toc}{chapter}{参考文献} %章立てせずに目次に追加するおまじない
     \renewcommand{\bibname}{参考文献} %これがないと，タイトルが「関連図書」になってしまう
-    \bibliography{bibtexファイル名} %bibtexファイルの読み込み
+    \bibliography{main.bib} %bibtexファイルの読み込み
     \bibliographystyle{junsrt} %本文に\cite{}を入れることで，参考文献表示
 \end{document}
