--- a/docs/main.bib
+++ b/docs/main.bib
@@ -1,5 +1,5 @@
 @misc{reddit2024third-quater-results,
-    author = {Reddit Inc.},
+    author = {Reddit},
     title = {Reddit Announces Third Quarter 2024 Results},
     year = {2024},
     note = {Accessed on 2024-12-08},
@@ -31,7 +31,7 @@
 }
 
 @misc{pew2024reddit-educated,
-    author = {Pew Research Center},
+    author = {PewResearchCenter},
     title = {1. Reddit news users more likely to be male, young and digital in their news preferences},
     year = {2016},
     note = {Accessed on 2024-12-08},
@@ -39,17 +39,17 @@
 }
 
 @article{shrinky2011,
-title = "The political power of social media: Technology, the public sphere, and political change",
-author = "Clay Shirky",
-year = "2011",
-month = jan,
-language = "English (US)",
-volume = "90",
-pages = "28--41",
-journal = "Foreign Affairs",
-issn = "0015-7120",
-publisher = "Council on Foreign Relations, Inc.",
-number = "1",
+    title = "The political power of social media: Technology, the public sphere, and political change",
+    author = "Clay Shirky",
+    year = "2011",
+    month = jan,
+    language = "English (US)",
+    volume = "90",
+    pages = "28--41",
+    journal = "Foreign Affairs",
+    issn = "0015-7120",
+    publisher = "Council on Foreign Relations, Inc.",
+    number = "1",
 }
 
 @incollection{howard-hussain2013,
@@ -67,27 +67,28 @@ number = "1",
 }
 
 @article{ulen2001democracy,
-  title={Democracy and the Internet: Cass R. Sunstein, Republic. Com. Princeton, Nj. Princeton University Press. Pp. 224. 2001},
-  author={Ulen, Thomas S},
-  year={2001},
-  publisher={Princeton, Nj. Princeton University Press}
+    title={Democracy and the Internet: Cass R. Sunstein, Republic. Com. Princeton, Nj. Princeton University Press. Pp. 224. 2001},
+    author={Ulen, Thomas S},
+    year={2001},
+    publisher={Princeton, Nj. Princeton University Press}
 }
 
 @book{pariser2011filter,
-  title={The filter bubble: What the Internet is hiding from you},
-  author={Pariser, Eli},
-  year={2011},
-  publisher={penguin UK}
+    title={The filter bubble: What the Internet is hiding from you},
+    author={Pariser, Eli},
+    year={2011},
+    publisher={penguin UK}
 }
 
 @article{allcott-gentzkow2017,
-Author = {Allcott, Hunt and Gentzkow, Matthew},
-Title = {Social Media and Fake News in the 2016 Election},
-Journal = {Journal of Economic Perspectives},
-Volume = {31},
-Number = {2},
-Year = {2017},
-Month = {May},
-Pages = {211–36},
-DOI = {10.1257/jep.31.2.211},
-URL = {https://www.aeaweb.org/articles?id=10.1257/jep.31.2.211}}
+    Author = {Allcott, Hunt and Gentzkow, Matthew},
+    Title = {Social Media and Fake News in the 2016 Election},
+    Journal = {Journal of Economic Perspectives},
+    Volume = {31},
+    Number = {2},
+    Year = {2017},
+    Month = {May},
+    Pages = {211–36},
+    DOI = {10.1257/jep.31.2.211},
+    URL = {https://www.aeaweb.org/articles?id=10.1257/jep.31.2.211}
+}
