--- a/docs/main.tex
+++ b/docs/main.tex
@@ -14,13 +14,14 @@
 \usepackage{tabularx}
 \usepackage{fancyhdr}
 \usepackage{ulem}
-\usepackage{cite}
 \usepackage{amsmath, amssymb, amsfonts}
 \usepackage{algorithmic}
 \usepackage{textcomp}
 \usepackage{xcolor}
 \usepackage[ipaex]{pxchfon}
 \usepackage{otf}
+\usepackage[round]{natbib}
+\bibliographystyle{plainnat}
 
 \usepackage[top=30truemm, bottom=30truemm, left=25truemm, right=25truemm]{
     geometry
@@ -29,6 +30,7 @@
 % 図や表のナンバリングを章に依存せず、通し番号にする設定
 \renewcommand{\thefigure}{\arabic{figure}}
 \renewcommand{\thetable}{\arabic{table}}
+
 
 \begin{document}
     \thispagestyle{empty}
@@ -99,7 +101,7 @@
 
     21世紀における紛争の様相は、従来の軍事的な衝突に加え、情報空間における戦いの重要性が増している。特に、ソーシャルネットワーキングサービス（SNS）は、紛争に関する情報発信や議論の場として機能し、世論形成に強い影響を与えている。これらのプラットフォームは、リアルタイムでの情報共有、国際的な議論の可視化、多様な声の拡散を可能にしている。
 
-    中でもRedditは、特異な構造と利用者特性を持つSNSとして注目されている。Redditは2005年に設立され、2024年時点で日毎のアクティブユーザー数が約9720万人に達している\cite{reddit2024third-quater-results}。その利用者層は主に北米とヨーロッパに集中しており\cite{statista2024reddit-country}、ユーザーの約44\%が18～29歳と比較的若い世代に偏っている\cite{statista2024reddit-age}。また、性別比率では男性が約60\%を占めるが、女性ユーザーも年々増加傾向にある\cite{statista2024reddit-gender}。さらに、Redditのユーザーは教育水準が高く、大学卒業者が多いことも特徴の一つである\cite{pew2024reddit-educated}。
+    中でもRedditは、特異な構造と利用者特性を持つSNSとして注目されている。Redditは2005年に設立され、2024年時点で日毎のアクティブユーザー数が約9720万人に達している\citep{reddit2024third-quater-results}。その利用者層は主に北米とヨーロッパに集中しており\citep{statista2024reddit-country}、ユーザーの約44\%が18～29歳と比較的若い世代に偏っている\citep{statista2024reddit-age}。また、性別比率では男性が約60\%を占めるが、女性ユーザーも年々増加傾向にある\citep{statista2024reddit-gender}。さらに、Redditのユーザーは教育水準が高く、大学卒業者が多いことも特徴の一つである\citep{pew2024reddit-educated}。
 
     このプラットフォームの最大の特徴は、匿名性と分散型のコミュニティ構造にある。Redditは、サブレディットと呼ばれる膨大な数の専門的なコミュニティで構成されており、それぞれが特定のトピックや興味に基づいて議論を展開する。投稿やコメントは、ユーザーからの評価（アップボートまたはダウンボート）によってランキングされるため、コミュニティ全体の関心や優先順位が自然に反映される仕組みが採用されている。この構造は、特定の話題について多様な視点を集約し、リアルタイムで議論を活発化させる基盤を提供している。
 
@@ -125,11 +127,11 @@
     \chapter{SNSにおける世論形成と国際紛争に関する先行研究}
 
     \section{SNSと世論形成}
-    ソーシャルネットワーキングサービス（SNS）は、21世紀において世論形成の重要なツールとなり、従来のマスメディアを補完する役割を果たしている。特に、情報が瞬時に広範囲に拡散され、多様な意見が可視化される点で、SNSは「集団行動を促進するツール」として位置づけられている\cite{shrinky2011}。例えば、2010年代の「アラブの春」では、TwitterやFacebookを通じて市民がプロテストの呼びかけや情報共有を行い、社会運動の大規模化を支えたことが報告されている\cite{howard-hussain2013}。このように、SNSは社会的・政治的な動員における迅速性と規模の拡大に寄与している。
+    ソーシャルネットワーキングサービス（SNS）は、21世紀において世論形成の重要なツールとなり、従来のマスメディアを補完する役割を果たしている。特に、情報が瞬時に広範囲に拡散され、多様な意見が可視化される点で、SNSは「集団行動を促進するツール」として位置づけられている\citep{shrinky2011}。例えば、2010年代の「アラブの春」では、TwitterやFacebookを通じて市民がプロテストの呼びかけや情報共有を行い、社会運動の大規模化を支えたことが報告されている\citep{howard-hussain2013}。このように、SNSは社会的・政治的な動員における迅速性と規模の拡大に寄与している。
 
-    一方で、SNSにおける情報流通には限界も指摘されている。Sunstein\cite{ulen2001democracy}やPariser\cite{pariser2011filter}は、エコーチェンバー現象やフィルターバブルが、ユーザーを特定の情報に偏らせるリスクを指摘している。たとえば、Facebookのアルゴリズムによるフィードの最適化が、政治的分断を助長する可能性があることが示されている。これらの現象は、SNSが多様な意見の交換を促進する一方で、逆に対話の閉鎖性を生む可能性があることを示唆している。
+    一方で、SNSにおける情報流通には限界も指摘されている。\citet{ulen2001democracy}やPariser\citet{pariser2011filter}は、エコーチェンバー現象やフィルターバブルが、ユーザーを特定の情報に偏らせるリスクを指摘している。たとえば、Facebookのアルゴリズムによるフィードの最適化が、政治的分断を助長する可能性があることが示されている。これらの現象は、SNSが多様な意見の交換を促進する一方で、逆に対話の閉鎖性を生む可能性があることを示唆している。
 
-    さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている\cite{allcott-gentzkow2017}。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
+    さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている\citep{allcott-gentzkow2017}。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
 
     \section{国際紛争におけるSNSの役割}
     SNSは国際紛争において、単なる情報共有の場を超え、プロパガンダや情報操作の場としても機能している。Howard \& Hussain（2013）は、アラブの春におけるSNSの役割について、情報の共有と抗議活動の組織化を促進する手段としての重要性を指摘している。また、Zeitzoff（2017）の研究では、イスラエルとハマスの紛争におけるTwitterの使用が、紛争当事者のソフトパワー的な戦略に寄与していることが示されている。たとえば、戦闘の進行状況をリアルタイムで伝えることで、国際的な支持を獲得する動きが観察されている。
@@ -417,18 +419,18 @@
     \section{SNSとデジタル公共圏の形成}
     分析結果は、投稿数の急増とセンチメントスコアの変化がRedditをデジタル公共圏として機能させたことを示している。仮説1では「紛争関連サブレディットの投稿数が急増する」としたが、DID分析の結果、この仮説は支持された。
 
-    投稿数の増加は、紛争がオンラインで公共圏を再編するプロセスを示している。この現象をハーバーマスの「公共圏」理論\cite{habermas1989structural}に照らして考えると、いくつかの特徴が明らかになる。
+    投稿数の増加は、紛争がオンラインで公共圏を再編するプロセスを示している。この現象をハーバーマスの「公共圏」理論\citep{habermas1989structural}に照らして考えると、いくつかの特徴が明らかになる。
 
     まず、議論の活性化と新規ユーザーの流入が挙げられる。投稿数の急増とセンチメントスコアのポジティブな変化を関連付けると、侵攻後に新規ユーザーが流入し、議論を活性化させた可能性が高い。これにより、ネガティブなセンチメントが緩和される効果が生じたと考えられる。この現象は仮説2の修正を必要とするが、SNSが紛争の初期段階で多様な意見を取り込む力を持つことを示している。
     
     次に、情報の迅速な共有が特徴として挙げられる。紛争関連サブレディットにおける投稿数の急増は、情報が迅速に共有されると同時に、議論が特定のテーマに集中することを示している。これは、公共圏がオンラインに移行する際、特に危機的状況でその傾向が顕著になることを示唆している。
     
-    ただし、SNSの公共圏としての役割には限界も存在する。アルゴリズムやエコーチェンバー現象\cite{pariser2011filter}が意見の多様性を阻害する可能性があり、これが議論の健全性にどのように影響するかはさらに検討が必要である。
+    ただし、SNSの公共圏としての役割には限界も存在する。アルゴリズムやエコーチェンバー現象\citep{pariser2011filter}が意見の多様性を阻害する可能性があり、これが議論の健全性にどのように影響するかはさらに検討が必要である。
 
     \section{感情的傾向の変化と情動の役割}
     センチメントスコアのポジティブシフトは、当初の仮説2（「ネガティブ化」）と異なる結果を示した。この結果を社会学的視点から解釈すると、いくつかの要素が浮かび上がる。
     
-    まず、新規ユーザーが中立的または肯定的な意見を投稿することで、従来のネガティブな議論を緩和する役割を果たした可能性が考えられる。この現象は、デジタル空間における情動の伝播（emotional contagion）\cite{kleinberg2020emotion}が議論のトーンを変える力を持つことを示している。
+    まず、新規ユーザーが中立的または肯定的な意見を投稿することで、従来のネガティブな議論を緩和する役割を果たした可能性が考えられる。この現象は、デジタル空間における情動の伝播（emotional contagion）\citep{kleinberg2020emotion}が議論のトーンを変える力を持つことを示している。
     
     さらに、センチメントスコアの変化には文化的要因が関与している可能性がある。具体的には、紛争地域外のユーザーが主導する人道的支援や平和的解決を求める声が反映されていると考えられる。このような変化は、SNSが持つ国際的な性質が文化的多様性を議論に反映させる力を持つことを示している。
 
@@ -439,7 +441,7 @@
     
     紛争直後には「軍事行動」や「人道危機」が主要なトピックとして浮上し、議論の焦点が緊急性の高いテーマに集中していた。この急性期における議論の集中化は、SNSが紛争時において迅速な情報共有とリアルタイムの意思形成の場として機能することを示している。
     
-    一方で、時間の経過とともに「規則」や「投稿削除」に関するメタ的議論が増加し、議論疲れ\cite{sunstein2001republic}や分極化が進行した可能性が示唆される。このような議論の移行は、SNSが単なる情報共有の場にとどまらず、プラットフォーム内部の規則や権力構造に対する自己批判的な議論の場としての役割を果たしていることを意味している。
+    一方で、時間の経過とともに「規則」や「投稿削除」に関するメタ的議論が増加し、議論疲れ\citep{sunstein2001republic}や分極化が進行した可能性が示唆される。このような議論の移行は、SNSが単なる情報共有の場にとどまらず、プラットフォーム内部の規則や権力構造に対する自己批判的な議論の場としての役割を果たしていることを意味している。
 
     これらの結果は、SNS上の議論が現実世界の紛争と連動しつつも、その独自の動態を持つことを示している。ただし、この動態はRedditという特定のプラットフォームに依存するため、SNS全体の法則として一般化することは慎重であるべきである。
 
@@ -492,6 +494,6 @@
 
     \addcontentsline{toc}{chapter}{参考文献} %章立てせずに目次に追加するおまじない
     \renewcommand{\bibname}{参考文献} %これがないと，タイトルが「関連図書」になってしまう
+    \bibliographystyle{chicago} %本文に\citep{}を入れることで，参考文献表示
     \bibliography{main.bib} %bibtexファイルの読み込み
-    \bibliographystyle{junsrt} %本文に\cite{}を入れることで，参考文献表示
 \end{document}
