Add references to 2nd chapter

--- a/docs/main.bib
+++ b/docs/main.bib
@@ -92,3 +92,54 @@
     DOI = {10.1257/jep.31.2.211},
     URL = {https://www.aeaweb.org/articles?id=10.1257/jep.31.2.211}
 }
+
+@article{zeitzoff2017,
+    author = {Thomas Zeitzoff},
+    title ={How Social Media Is Changing Conflict},
+    
+    journal = {Journal of Conflict Resolution},
+    volume = {61},
+    number = {9},
+    pages = {1970-1991},
+    year = {2017},
+    doi = {10.1177/0022002717721392},
+    
+    URL = { 
+        https://doi.org/10.1177/0022002717721392
+    },
+    eprint = { 
+        https://doi.org/10.1177/0022002717721392
+    },
+    abstract = { Social media increasingly plays a role in conflict and contentious politics. Politicians, leaders, insurgents, and protestors all have used it as a tool for communication. At the same time, scholars have turned to social media as a source of new data on conflict. I provide a framework for understanding social media’s influence on conflict through four interrelated points: (1) social media reduces the costs of communication, (2) it increases the speed and dissemination of information, (3) scholars should focus on the strategic interaction and competitive adaption of actors in response to communication technology changes, and (4) the new data that social media provides are not only an important resource, but also fundamentally change the information available to conflict actors, thereby shaping the conflict itself. In sum, social media’s influence on conflict defies simplistic explanations that argue that it privileges incumbents or challengers. }
+}
+
+@book{bennett2013logic,
+    title={The logic of connective action: Digital media and the personalization of contentious politics},
+    author={Bennett, W Lance and Segerberg, Alexandra},
+    year={2013},
+    publisher={Cambridge University Press}
+}
+
+@misc{massanari2015participatory,
+    title={Participatory culture, community, and play: Learning from reddit. PeterLang Inc},
+    author={Massanari, A},
+    year={2015},
+    publisher={International Academic Publishers}
+}
+
+@article{gaffney2018caveat,
+    title={Caveat emptor, computational social science: Large-scale missing data in a widely-published Reddit corpus},
+    author={Gaffney, Devin and Matias, J Nathan},
+    journal={PloS one},
+    volume={13},
+    number={7},
+    pages={e0200162},
+    year={2018},
+    publisher={Public Library of Science San Francisco, CA USA}
+}
+@article{massanari2015participatory,
+    title={Participatory culture, community, and play},
+    author={Massanari, Adrienne Lynne},
+    journal={Learning from},
+year={2015}
+}
