--- a/docs/main.tex
+++ b/docs/main.tex
@@ -31,7 +31,6 @@
 \renewcommand{\thefigure}{\arabic{figure}}
 \renewcommand{\thetable}{\arabic{table}}
 
-
 \begin{document}
     \thispagestyle{empty}
     \begin{center}
@@ -134,26 +133,26 @@
     さらに、SNSが選挙や緊急事態において果たす役割も注目されている。たとえば、2016年のアメリカ大統領選挙では、Twitterを通じての情報戦が候補者のイメージ形成に影響を与えたことが明らかにされている\citep{allcott-gentzkow2017}。このように、SNSの利用は単なる情報共有を超え、世論形成における戦略的な要素としても機能している。
 
     \section{国際紛争におけるSNSの役割}
-    SNSは国際紛争において、単なる情報共有の場を超え、プロパガンダや情報操作の場としても機能している。Howard \& Hussain（2013）は、アラブの春におけるSNSの役割について、情報の共有と抗議活動の組織化を促進する手段としての重要性を指摘している。また、Zeitzoff（2017）の研究では、イスラエルとハマスの紛争におけるTwitterの使用が、紛争当事者のソフトパワー的な戦略に寄与していることが示されている。たとえば、戦闘の進行状況をリアルタイムで伝えることで、国際的な支持を獲得する動きが観察されている。
+    SNSは国際紛争において、単なる情報共有の場を超え、プロパガンダや情報操作の場としても機能している。\citet{howard-hussain2013}は、アラブの春におけるSNSの役割について、情報の共有と抗議活動の組織化を促進する手段としての重要性を指摘している。また、\citet{zeitzoff2017}の研究では、イスラエルとハマスの紛争におけるTwitterの使用が、紛争当事者のソフトパワー的な戦略に寄与していることが示されている。たとえば、戦闘の進行状況をリアルタイムで伝えることで、国際的な支持を獲得する動きが観察されている。
 
     さらに、SNSは国際的な議論を加速させるツールとしても機能している。イスラエルとパレスチナの紛争では、世界中のユーザーがSNSを通じて意見を発信し、国際世論が紛争当事者への外交的プレッシャーとして作用するケースが見られる。これにより、SNSは紛争解決や国際支援のプロセスに間接的な影響を及ぼしている。
 
-    Bennett \& Segerberg（2012）は、SNSが「ネットワーク化された個人的行動」を促進し、従来の組織化された抗議活動よりも分散的で迅速な動員を可能にすると述べている。この視点は、SNSが国際紛争の文脈において、情報共有だけでなく、個人の行動を直接的に動員する力を持つことを示唆している。
+    \citet{bennett2013logic}は、SNSが「ネットワーク化された個人的行動」を促進し、従来の組織化された抗議活動よりも分散的で迅速な動員を可能にすると述べている。この視点は、SNSが国際紛争の文脈において、情報共有だけでなく、個人の行動を直接的に動員する力を持つことを示唆している。
 
     \section{Redditの特異性}
-    Redditは他のSNSと比較して匿名性が高く、ユーザーが特定のトピックに関心を持つコミュニティ（サブレディット）に参加することで、多様な意見交換が可能となるプラットフォームである。Massanari（2015）は、Redditの匿名性と分散型構造が、多様な視点を反映した議論を促進すると指摘している。また、「アップボート」「ダウンボート」の評価システムは、特定の意見が可視化される一方で、少数派の意見も一定の支持を得て拡散される可能性を持つ。
+    Redditは他のSNSと比較して匿名性が高く、ユーザーが特定のトピックに関心を持つコミュニティ（サブレディット）に参加することで、多様な意見交換が可能となるプラットフォームである。\citet{massanari2015participatory}は、Redditの匿名性と分散型構造が、多様な視点を反映した議論を促進すると指摘している。また、「アップボート」「ダウンボート」の評価システムは、特定の意見が可視化される一方で、少数派の意見も一定の支持を得て拡散される可能性を持つ。
 
-    特に、国際紛争に関する議論では、サブレディットごとに異なる視点が展開されることが多い。たとえば、「r/worldnews」ではグローバルな視点からの議論が行われる一方、「r/Israel」や「r/palestine」では地域特有の視点が強調される。Gaffney \& Matias（2018）の研究によれば、Redditのコメントシステムは階層的な議論構造を生み出し、紛争の複雑な側面に関する多層的な議論を可能にしている。この特徴は、他のSNSでは観察されにくいReddit特有の性質といえる。
+    特に、国際紛争に関する議論では、サブレディットごとに異なる視点が展開されることが多い。たとえば、「r/worldnews」ではグローバルな視点からの議論が行われる一方、「r/Israel」や「r/palestine」では地域特有の視点が強調される。\citet{gaffney2018caveat}の研究によれば、Redditのコメントシステムは階層的な議論構造を生み出し、紛争の複雑な側面に関する多層的な議論を可能にしている。この特徴は、他のSNSでは観察されにくいReddit特有の性質といえる。
 
-    さらに、Mills（2018）は、Redditのサブレディットが「想像の共同体」として機能する点を指摘しており、特定のイデオロギーや価値観を共有するユーザー間の結束を強化する傾向がある。この点は、Redditが紛争に関する議論においてどのように偏りを生じさせる可能性があるかを示唆している。
+    さらに、Redditのサブレディットは、特定のトピックや価値観を共有するユーザーが集まることで結束を強化する特徴を持つ。\citet{massanari2015participatory}は、Redditの匿名性と分散型構造が、多様な意見を反映しつつも、特定のコミュニティにおける共有された価値観や視点の強化につながると指摘している。\citet{gaffney2018caveat}も、Redditのコミュニティ構造が特定の議論を深める場として機能する一方で、ユーザー間の結束を促進する仕組みを提供していることを示している。
 
     \section{先行研究との関係}
-    これまでの先行研究は、SNSが国際紛争や政治的動員に与える影響について、SNS全般の役割や、主にTwitterやFacebookといったプラットフォームの影響を分析してきた。たとえば、Shirky（2011）やHoward \& Hussain（2013）は、SNSがプロテスタントや社会運動の組織化を支援し、情報拡散を迅速化するツールとしての役割を強調している。また、Zeitzoff（2017）はTwitterを用いて、紛争当事者が戦略的なコミュニケーションを通じて国際的な支持を獲得する手段としてSNSを活用していることを示している。しかし、これらの研究は、特定のプラットフォームの独自性や、ユーザー間の議論ダイナミクスの詳細には踏み込んでおらず、SNSが個々のユーザーやコミュニティの世論形成にどのように作用するかについては限定的である。
+    これまでの先行研究は、SNSが国際紛争や政治的動員に与える影響について、SNS全般の役割や、主にTwitterやFacebookといったプラットフォームの影響を分析してきた。たとえば、\citet{shrinky2011}や\citet{howard-hussain2013}は、SNSがプロテスタントや社会運動の組織化を支援し、情報拡散を迅速化するツールとしての役割を強調している。また、\citet{zeitzoff2017}はTwitterを用いて、紛争当事者が戦略的なコミュニケーションを通じて国際的な支持を獲得する手段としてSNSを活用していることを示している。しかし、これらの研究は、特定のプラットフォームの独自性や、ユーザー間の議論ダイナミクスの詳細には踏み込んでおらず、SNSが個々のユーザーやコミュニティの世論形成にどのように作用するかについては限定的である。
 
     本研究は、これらの先行研究に対して以下の3つの点の視点を示すという、学術的意義を有する。
 
     \subsection{Redditという未開拓プラットフォームへの着目}
-    既存の研究の多くがTwitterやFacebookといった既成のSNSに焦点を当てている中で、本研究はRedditという匿名性が高く、分散型構造を持つプラットフォームを対象としている。Redditの特異性は、サブレディットというコミュニティ構造と、ユーザーがコンテンツを評価する投票システムにある。この特徴は、議論が多様な視点を含む形で展開される可能性を高める一方で、議論の偏りや極化を生むリスクも持つ。Massanari（2015）が示すように、Redditの評価システムは、少数意見や論争的な意見の可視性を保証する仕組みとして機能しており、これが世論形成に与える影響は他のSNSとは一線を画す。
+    既存の研究の多くがTwitterやFacebookといった既成のSNSに焦点を当てている中で、本研究はRedditという匿名性が高く、分散型構造を持つプラットフォームを対象としている。Redditの特異性は、サブレディットというコミュニティ構造と、ユーザーがコンテンツを評価する投票システムにある。この特徴は、議論が多様な視点を含む形で展開される可能性を高める一方で、議論の偏りや極化を生むリスクも持つ。\citet{massanari2015participatory}が示すように、Redditの評価システムは、少数意見や論争的な意見の可視性を保証する仕組みとして機能しており、これが世論形成に与える影響は他のSNSとは一線を画す。
 
     特に、本研究は、イスラエル・レバノン紛争という具体的な国際事件を題材に、Reddit上での議論のダイナミクスを分析することで、このプラットフォームが国際紛争に関連する世論形成や情報拡散に与える独自の影響を明らかにする。
 
