Add references after 2nd chapter

--- a/docs/main.bib
+++ b/docs/main.bib
@@ -137,9 +137,24 @@
     year={2018},
     publisher={Public Library of Science San Francisco, CA USA}
 }
+
 @article{massanari2015participatory,
     title={Participatory culture, community, and play},
     author={Massanari, Adrienne Lynne},
     journal={Learning from},
-year={2015}
+    year={2015}
+}
+
+@book{habermas1991structural,
+    title={The structural transformation of the public sphere: An inquiry into a category of bourgeois society},
+    author={Habermas, Jurgen},
+    year={1991},
+    publisher={MIT press}
+}
+
+@book{sunstein2001republic,
+    title={Republic.com},
+    author={Sunstein, C},
+    year={2001},
+    publisher={Princeton University Press}
 }
