--- a/docs/main.tex
+++ b/docs/main.tex
@@ -418,7 +418,7 @@
     \section{SNSとデジタル公共圏の形成}
     分析結果は、投稿数の急増とセンチメントスコアの変化がRedditをデジタル公共圏として機能させたことを示している。仮説1では「紛争関連サブレディットの投稿数が急増する」としたが、DID分析の結果、この仮説は支持された。
 
-    投稿数の増加は、紛争がオンラインで公共圏を再編するプロセスを示している。この現象をハーバーマスの「公共圏」理論\citep{habermas1989structural}に照らして考えると、いくつかの特徴が明らかになる。
+    投稿数の増加は、紛争がオンラインで公共圏を再編するプロセスを示している。この現象をハーバーマスの「公共圏」理論\citep{habermas1991structural}に照らして考えると、いくつかの特徴が明らかになる。
 
     まず、議論の活性化と新規ユーザーの流入が挙げられる。投稿数の急増とセンチメントスコアのポジティブな変化を関連付けると、侵攻後に新規ユーザーが流入し、議論を活性化させた可能性が高い。これにより、ネガティブなセンチメントが緩和される効果が生じたと考えられる。この現象は仮説2の修正を必要とするが、SNSが紛争の初期段階で多様な意見を取り込む力を持つことを示している。
     
@@ -427,22 +427,22 @@
     ただし、SNSの公共圏としての役割には限界も存在する。アルゴリズムやエコーチェンバー現象\citep{pariser2011filter}が意見の多様性を阻害する可能性があり、これが議論の健全性にどのように影響するかはさらに検討が必要である。
 
     \section{感情的傾向の変化と情動の役割}
-    センチメントスコアのポジティブシフトは、当初の仮説2（「ネガティブ化」）と異なる結果を示した。この結果を社会学的視点から解釈すると、いくつかの要素が浮かび上がる。
+    センチメントスコアのポジティブシフトは、当初の仮説2（「ネガティブ化」）とは異なる結果を示した。ただし、この変化は0.0528という非常に小さな値であることから、慎重に解釈する必要がある。
     
-    まず、新規ユーザーが中立的または肯定的な意見を投稿することで、従来のネガティブな議論を緩和する役割を果たした可能性が考えられる。この現象は、デジタル空間における情動の伝播（emotional contagion）\citep{kleinberg2020emotion}が議論のトーンを変える力を持つことを示している。
+    まず、この小幅なポジティブシフトは、新規ユーザーの投稿傾向や、既存の議論に対する微細なバイアスの影響を受けた可能性がある。新規ユーザーが比較的中立的または肯定的な意見を投稿することで、全体的なセンチメントの傾向がわずかに変化したことが考えられる。ただし、この現象が議論全体に与える影響の大きさや持続性は不明であり、さらなるデータ分析が求められる。
     
-    さらに、センチメントスコアの変化には文化的要因が関与している可能性がある。具体的には、紛争地域外のユーザーが主導する人道的支援や平和的解決を求める声が反映されていると考えられる。このような変化は、SNSが持つ国際的な性質が文化的多様性を議論に反映させる力を持つことを示している。
-
-    これらの結果は、紛争直後のSNSが、情報共有だけでなく、情動的な安定化装置としても機能することを示唆している。
+    また、センチメントスコアの変化には、文化的および地理的な要因が寄与している可能性がある。たとえば、紛争地域外のユーザーが人道的支援や平和的解決を呼びかける投稿を行ったことで、ポジティブなトーンがわずかに増加した可能性がある。こうした投稿は、特定の地域や文化的背景に基づく多様な視点が反映されていることを示唆している。ただし、この仮説を裏付けるには、投稿の内容や出自についてより詳細な分析が必要である。
+    
+    最後に、この結果は、SNSが紛争直後のデジタル空間において、情報共有や議論の場としてだけでなく、情動的な安定化の役割を果たす可能性を示している。ただし、今回のセンチメントスコアの変化は限定的であり、SNSがどの程度安定化装置として機能したかを断定することは困難である。SNSのこうした役割については、さらなるケーススタディを通じて検証する必要があるだろう。
 
     \section{トピックの変遷と議論の多層性}
     仮説3では「議論が戦闘や人道危機から国際支援や解決策へと焦点を移す」としていたが、トピックモデリングの結果、実際には「軍事行動」や「人道危機」から「規則」や「投稿削除」へ議論が移行したことが確認された。これにより、仮説3の一部は否定されるが、議論の焦点が時間の経過とともに変化するという主張は支持された。
     
     紛争直後には「軍事行動」や「人道危機」が主要なトピックとして浮上し、議論の焦点が緊急性の高いテーマに集中していた。この急性期における議論の集中化は、SNSが紛争時において迅速な情報共有とリアルタイムの意思形成の場として機能することを示している。
     
-    一方で、時間の経過とともに「規則」や「投稿削除」に関するメタ的議論が増加し、議論疲れ\citep{sunstein2001republic}や分極化が進行した可能性が示唆される。このような議論の移行は、SNSが単なる情報共有の場にとどまらず、プラットフォーム内部の規則や権力構造に対する自己批判的な議論の場としての役割を果たしていることを意味している。
+    一方で、時間の経過とともに「規則」や「投稿削除」に関するメタ的議論が増加し、「議論疲れ」や「分極化」\citep{sunstein2001republic}が進行した可能性が示唆される。このような議論の移行は、SNSが単なる情報共有の場にとどまらず、プラットフォーム内部の規則や権力構造に対する自己批判的な議論の場としての役割を果たしていることを意味している\citep{habermas1991structural}。
 
-    これらの結果は、SNS上の議論が現実世界の紛争と連動しつつも、その独自の動態を持つことを示している。ただし、この動態はRedditという特定のプラットフォームに依存するため、SNS全体の法則として一般化することは慎重であるべきである。
+    これらの結果は、SNS上の議論が現実世界の紛争と連動しつつも、その独自の動態を持つことを示している。ただし、この動態はRedditという特定のプラットフォームに依存するため、SNS全体の法則として一般化することは慎重であるべきである\citep{pariser2011filter}。
 
     \section{包括的結論: 仮説と結果の統合}
     本研究の分析結果は、SNSが国際紛争において多層的な役割を果たすことを示している。まず、新規ユーザーの流入が議論の内容と感情的トーンに影響を与えることで、デジタル公共圏を再編する役割を果たしていることが明らかになった。また、紛争の急性期において、情報共有と議論の集中化が進み、SNSがリアルタイムでの社会的合意形成を可能にする場として機能していることが確認された。
