Fix format of cover

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -33,21 +33,25 @@
 
 \begin{document}
     \thispagestyle{empty}
+
     \begin{center}
-        \vspace{20mm}
-        {\Large\noindent 2024年度 卒業論文}\\
-        \vspace{40mm}
+        \vspace*{20mm}
+        {\LARGE\noindent 2024年度 卒業論文}\\
+        \vspace{5mm}
         {\huge\noindent\textbf{SNSにおける世論形成と紛争に関する\\
         Reddit投稿分析}}\\
         \medskip
-        {\huge\noindent\textbf{ーイスラエルによるレバノン侵攻を例にー}}\\
-        \vspace{\baselineskip}
-        \vspace{40mm}
+        {\huge\noindent\textbf{ーイスラエルによるレバノン侵攻を例にー}}
+    \end{center}
     
-        {\Large\noindent グローバル地域文化学部 アジア・太平洋コース \\ 
-        \vspace{\baselineskip} 学生ID: 1122192047 氏名: 種村尚大\\
-        \vspace{\baselineskip} 指導教員: \CID{8443}田智子 }
-        \vspace{40mm}
+    \vfill
+    
+    \begin{center}
+        {\Large\noindent グローバル地域文化学部 アジア・太平洋コース}\\
+        \vspace{\baselineskip}
+        {\Large\noindent 学生ID: 1122192047 氏名: 種村尚大}\\
+        \vspace{\baselineskip}
+        {\Large\noindent 指導教員: \CID{8443}田智子}
     \end{center}
 
     \thispagestyle{empty}
