Update and inprove bib

--- a/docs/main.bib
+++ b/docs/main.bib
@@ -1,160 +1,145 @@
-@misc{reddit2024third-quater-results,
-    author = {Reddit},
+@article{allcott-gentzkow2017,
+    author = {Allcott Hunt and Matthew Gentzkow},
+    title = {Social Media and Fake News in the 2016 Election},
+    journal = {Journal of Economic Perspectives},
+    volume = {31},
+    number = {2},
+    year = {2017},
+    pages = {211--236},
+    url = {https://www.aeaweb.org/articles?id=10.1257/jep.31.2.211},
+}
+
+@book{bennett2013logic,
+    title = {The Logic of Connective Action: Digital Media and the Personalization of Contentious Politics},
+    author = {W. Lance Bennett and Alexandra Segerberg},
+    year = {2013},
+    publisher = {Cambridge University Press},
+    address = {Cambridge}
+}
+
+@online{reddit2024third-quarter-results,
+    author = {{Reddit, Inc.}},
     title = {Reddit Announces Third Quarter 2024 Results},
     year = {2024},
-    note = {Accessed on 2024-12-08},
-    url = {https://investor.redditinc.com/news-events/news-releases/news-details/2024/Reddit-Announces-Third-Quarter-2024-Results/}
+    url = {https://investor.redditinc.com/news-events/news-releases/news-details/2024/Reddit-Announces-Third-Quarter-2024-Results/},
+    note = {Accessed December 8, 2024}
 }
 
-@misc{statista2024reddit-country,
+@online{statista2024reddit-country,
     author = {Statista},
-    title = {Regional distribution of desktop traffic to Reddit.com as of March 2024, by country},
+    title = {Regional Distribution of Desktop Traffic to Reddit.com as of March 2024, by Country},
     year = {2024},
-    note = {Accessed on 2024-12-08},
-    url = {https://www.statista.com/statistics/325144/reddit-global-active-user-distribution/}
+    url = {https://www.statista.com/statistics/325144/reddit-global-active-user-distribution/},
+    note = {Accessed December 8, 2024}
 }
 
-@misc{statista2024reddit-age,
-    author = {Statista},
-    title = {Percentage of U.S. adults who use Reddit as of September 2023, by age group},
-    year = {2024},
-    note = {Accessed on 2024-12-08},
-    url = {https://www.statista.com/statistics/261766/share-of-us-internet-users-who-use-reddit-by-age-group/}
-}
-
-@misc{statista2024reddit-gender,
-    author = {Statista},
-    title = {Distribution of Reddit users worldwide as of 1st quarter 2024, by gender},
-    year = {2024},
-    note = {Accessed on 2024-12-08},
-    url = {https://www.statista.com/statistics/1255182/distribution-of-users-on-reddit-worldwide-gender/?utm_source=chatgpt.com}
-}
-
-@misc{pew2024reddit-educated,
-    author = {PewResearchCenter},
-    title = {1. Reddit news users more likely to be male, young and digital in their news preferences},
+@online{pew2016,
+    author = {{Pew Research Center}},
+    title = {Reddit News Users More Likely to Be Male, Young and Digital in Their News Preferences},
     year = {2016},
-    note = {Accessed on 2024-12-08},
-    url = {https://www.pewresearch.org/journalism/2016/02/25/reddit-news-users-more-likely-to-be-male-young-and-digital-in-their-news-preferences/?utm_source=chatgpt.com}
+    url = {https://www.pewresearch.org/journalism/2016/02/25/reddit-news-users-more-likely-to-be-male-young-and-digital-in-their-news-preferences/},
+    note = {Accessed December 8, 2024}
 }
 
-@article{shrinky2011,
-    title = "The political power of social media: Technology, the public sphere, and political change",
-    author = "Clay Shirky",
-    year = "2011",
-    month = jan,
-    language = "English (US)",
-    volume = "90",
-    pages = "28--41",
-    journal = "Foreign Affairs",
-    issn = "0015-7120",
-    publisher = "Council on Foreign Relations, Inc.",
-    number = "1",
+@online{statista2024reddit-age,
+    author = {Statista},
+    title = {Percentage of U.S. Adults Who Use Reddit as of September 2023, by Age Group},
+    year = {2024},
+    url = {https://www.statista.com/statistics/261766/share-of-us-internet-users-who-use-reddit-by-age-group/},
+    note = {Accessed December 8, 2024}
 }
 
-@incollection{howard-hussain2013,
-    author = {Howard, Philip N. and Hussain, Muzammil M.},
-    isbn = {9780199936953},
-    title = {17Digital Media and the Arab Spring},
+@online{statista2024reddit-gender,
+    author = {Statista},
+    title = {Distribution of Reddit Users Worldwide as of 1st Quarter 2024, by Gender},
+    year = {2024},
+    url = {https://www.statista.com/statistics/1255182/distribution-of-users-on-reddit-worldwide-gender/},
+    note = {Accessed December 8, 2024}
+}
+
+@article{shirky2011,
+    title = {The Political Power of Social Media: Technology, the Public Sphere, and Political Change},
+    author = {Clay Shirky},
+    year = {2011},
+    journal = {Foreign Affairs},
+    volume = {90},
+    number = {1},
+    pages = {28--41},
+    publisher = {Council on Foreign Relations, Inc.},
+    address = {New York},
+}
+
+@inbook{hussain2013democracy,
+    author = {Philip Howard and Muzammil Hussain},
+    title = {Digital Media and the Arab Spring},
     booktitle = {Democracy’s Fourth Wave?: Digital Media and the Arab Spring},
     publisher = {Oxford University Press},
+    address = {Oxford},
     year = {2013},
-    month = {03},
-    abstract = {It has been 15 years since the last “wave” of democratization. Between 1989 and 1995, many remnants of the Soviet Union and failed authoritarian regimes in other parts of the world turned themselves into variously functional electoral democracies. But as a region, North Africa and the Middle East were noticeably devoid of popular democracy movements—until the early months of 2011. Democratization movements had existed long before technologies such as mobile phones and the internet came to these countries. But with these technologies, people sharing an interest in democracy built extensive networks, created social capital, and organized political action.},
-    doi = {10.1093/acprof:oso/9780199936953.003.0001},
-    url = {https://doi.org/10.1093/acprof:oso/9780199936953.003.0001},
-    eprint = {https://academic.oup.com/book/0/chapter/161707586/chapter-ag-pdf/44916317/book\_12228\_section\_161707586.ag.pdf},
-}
-
-@article{ulen2001democracy,
-    title={Democracy and the Internet: Cass R. Sunstein, Republic. Com. Princeton, Nj. Princeton University Press. Pp. 224. 2001},
-    author={Ulen, Thomas S},
-    year={2001},
-    publisher={Princeton, Nj. Princeton University Press}
-}
-
-@book{pariser2011filter,
-    title={The filter bubble: What the Internet is hiding from you},
-    author={Pariser, Eli},
-    year={2011},
-    publisher={penguin UK}
-}
-
-@article{allcott-gentzkow2017,
-    Author = {Allcott, Hunt and Gentzkow, Matthew},
-    Title = {Social Media and Fake News in the 2016 Election},
-    Journal = {Journal of Economic Perspectives},
-    Volume = {31},
-    Number = {2},
-    Year = {2017},
-    Month = {May},
-    Pages = {211–36},
-    DOI = {10.1257/jep.31.2.211},
-    URL = {https://www.aeaweb.org/articles?id=10.1257/jep.31.2.211}
+    url={https://doi.org/10.1093/acprof:oso/9780199936953.003.0001},
 }
 
 @article{zeitzoff2017,
     author = {Thomas Zeitzoff},
-    title ={How Social Media Is Changing Conflict},
-    
+    title = {How Social Media Is Changing Conflict},
     journal = {Journal of Conflict Resolution},
     volume = {61},
     number = {9},
-    pages = {1970-1991},
+    pages = {1970--1991},
     year = {2017},
-    doi = {10.1177/0022002717721392},
-    
-    URL = { 
-        https://doi.org/10.1177/0022002717721392
-    },
-    eprint = { 
-        https://doi.org/10.1177/0022002717721392
-    },
-    abstract = { Social media increasingly plays a role in conflict and contentious politics. Politicians, leaders, insurgents, and protestors all have used it as a tool for communication. At the same time, scholars have turned to social media as a source of new data on conflict. I provide a framework for understanding social media’s influence on conflict through four interrelated points: (1) social media reduces the costs of communication, (2) it increases the speed and dissemination of information, (3) scholars should focus on the strategic interaction and competitive adaption of actors in response to communication technology changes, and (4) the new data that social media provides are not only an important resource, but also fundamentally change the information available to conflict actors, thereby shaping the conflict itself. In sum, social media’s influence on conflict defies simplistic explanations that argue that it privileges incumbents or challengers. }
-}
-
-@book{bennett2013logic,
-    title={The logic of connective action: Digital media and the personalization of contentious politics},
-    author={Bennett, W Lance and Segerberg, Alexandra},
-    year={2013},
-    publisher={Cambridge University Press}
-}
-
-@misc{massanari2015participatory,
-    title={Participatory culture, community, and play: Learning from reddit. PeterLang Inc},
-    author={Massanari, A},
-    year={2015},
-    publisher={International Academic Publishers}
-}
-
-@article{gaffney2018caveat,
-    title={Caveat emptor, computational social science: Large-scale missing data in a widely-published Reddit corpus},
-    author={Gaffney, Devin and Matias, J Nathan},
-    journal={PloS one},
-    volume={13},
-    number={7},
-    pages={e0200162},
-    year={2018},
-    publisher={Public Library of Science San Francisco, CA USA}
-}
-
-@article{massanari2015participatory,
-    title={Participatory culture, community, and play},
-    author={Massanari, Adrienne Lynne},
-    journal={Learning from},
-    year={2015}
-}
-
-@book{habermas1991structural,
-    title={The structural transformation of the public sphere: An inquiry into a category of bourgeois society},
-    author={Habermas, Jurgen},
-    year={1991},
-    publisher={MIT press}
+    url = {https://doi.org/10.1177/0022002717721392}
 }
 
 @book{sunstein2001republic,
-    title={Republic.com},
-    author={Sunstein, C},
-    year={2001},
-    publisher={Princeton University Press}
+    title = {Republic.com},
+    author = {Cass R. Sunstein},
+    year = {2001},
+    publisher = {Princeton University Press},
+    address = {Princeton}
+}
+
+@book{pariser2011filter,
+    title = {The Filter Bubble: What the Internet is Hiding from You},
+    author = {Eli Pariser},
+    year = {2011},
+    publisher = {Penguin},
+    address = {London}
+}
+
+@book{massanari2015participatory,
+    title = {Participatory Culture, Community, and Play: Learning from Reddit},
+    author = {Adrienne Massanari},
+    year = {2015},
+    publisher = {Peter Lang},
+    address = {Lausanne}
+}
+
+@article{gaffney2018caveat,
+    title = {Caveat Emptor, Computational Social Science: Large-Scale Missing Data in a Widely-Published Reddit Corpus},
+    author = {Devin Gaffney and J. Nathan Matias},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    year = {2018},
+    volume = {13},
+    url = {https://doi.org/10.1371/journal.pone.0200162},
+    pages = {1--13},
+    number = {7},
+}
+
+@online{pew2024reddit-educated,
+    author = {{Pew Research Center}},
+    title = {Reddit News Users More Likely to Be Male, Young and Digital in Their News Preferences},
+    year = {2016},
+    url = {https://www.pewresearch.org/journalism/2016/02/25/reddit-news-users-more-likely-to-be-male-young-and-digital-in-their-news-preferences/},
+    note = {Accessed December 8, 2024}
+}
+
+@article{sunstein2008democracy,
+    title={Democracy and the Internet},
+    author={Cass R. Sunstein},
+    journal={Information technology and moral philosophy},
+    volume={93},
+    year={2008},
+    publisher={Cambridge University Press},
+    address={Cambridge}
 }
